Fix overflow bug

--- a/src/components/nav.less
+++ b/src/components/nav.less
@@ -4,7 +4,6 @@
 
 // Nav
 .nav {
-	overflow: hidden;
 	a {
 		display: block;
 		text-decoration: none;
