--- a/src/theme.less
+++ b/src/theme.less
@@ -422,11 +422,11 @@ select {
 }
 
 .table-cell-inner {
-	border-left: 1px solid @border-color-base;
-	border-top: 1px solid @border-color-base;
+	border-left: 1px solid @border-color-base!important;
+	border-top: 1px solid @border-color-base!important;
 }
 .table-cell-first {
-	border-left-width: 0;
+	border-left-width: 0!important;
 }
 .table-fixed-left {
 	border-right: 1px solid @border-color-base;
